<resources>
    <string name="app_name">BroBot</string>
    <string name="logo_description">Bro Bot Logo</string>
    <string name="email_hint">Email/Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="email">Email</string>
    <string name="enterEmail">Enter Your Email</string>

    <string name="signInMessage">Hi There! Always here for you</string>
    <string name="signUpMessage">Welcome! Let\'s get to know each other better</string>

    <string name="forgotPassword">Forgot Password?</string>
    <string name="haveAccount">Already Have Account?</string>

    <string name="title_activity_chat">chatActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BroBot</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_desc">User Image</string>
    <string name="userName">User Name</string>

    <string name="gitCheck">Git Working</string>
    <string name="moodTracker">Mood Tracker</string>
    <string name="trackByDate">Track by Date:</string>
    <string name="goBack">Go Back</string>
    <string name="sayOnMind">Say whatever is on your mind </string>
    <string name="menu_Chat">Chat</string>
    <string name="menu_dailyJournal">Daily Journal</string>
    <string name="menu_Interests">Interests</string>
    <string name="menu_Theme">Dark Theme</string>
    <string name="Setting">Settings</string>
    <string name="title_activity_daily_journal">Daily Journal</string>

    <string name="action_logout">Logout</string>
    <string name="changeTheme">Dark</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enterName">Enter Your Name</string>
    <string name="pickDate">Pick Date</string>
    <string name="viewMoodByDate">View Mood By Date</string>
    <string name="cancel">Cancel</string>
    <string name="Interest_Entertainment">Entertainment</string>
    <string name="EmotionDescription">Emotion Score Ranging From -1 To 1 \n\n
       \t\t\t\t 1 ---> \tPositive \n
       \t\t\t\t 0 ---> \tSatisfactory \n
        \t\t\t\t-1 ---> \tNegative \n
    </string>
    <string name="addNewJournal">Add New Journal</string>
    <string name="journalTitle">Enter Journal Title</string>
    <string name="newJournalText">Journal Goes Here ...</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="personal_details">Personal Details</string>
    <string name="nickName">Name</string>
    <string name="gender_title">Gender</string>
    <string name="emergency_contacts">EMERGENCY CONTACTS</string>
    <string name="contact">Contact</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="secondary_contact">Secondary Contact</string>
</resources>
