<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/personal_details">

        <EditTextPreference
            app:key="NickName"
            app:title="@string/nickName"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/gender"
            app:entryValues="@array/gender_values"
            app:key="gender"
            app:title="@string/gender_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/emergency_contacts">

        <PreferenceCategory app:title="@string/primary_contact">
            <EditTextPreference
                app:key="primary_name"
                app:title="@string/nickName"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:key="primary_contact"
                app:title="@string/contact"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
        <PreferenceCategory app:title="@string/secondary_contact">
            <EditTextPreference
                app:key="secondary_name"
                app:title="@string/nickName"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:key="secondary_contact"
                app:title="@string/contact"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>

    </PreferenceCategory>

</PreferenceScreen>
