<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Chat"
            android:icon="@drawable/chat"
            android:title="@string/menu_Chat" />
        <item
            android:id="@+id/nav_MoodTracker"
            android:icon="@drawable/track"
            android:title="@string/moodTracker" />
        <item
            android:id="@+id/nav_DailyJournal"
            android:icon="@drawable/journal"
            android:title="@string/menu_dailyJournal" />

        <item
            android:id="@+id/nav_Interest"
            android:icon="@drawable/interests"
            android:title="@string/menu_Interests" />


    </group>

    <item
        android:id="@+id/nav_Settings"
        android:icon="@drawable/settings"
        android:title="@string/Setting"
        />



</menu>
