<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/navHeader_cv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/navHeaderUserImage"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/nav_header_desc"
            android:padding="10dp"
            android:src="@drawable/logo"

            />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/navHeaderUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navHeader_cv"
        android:layout_marginStart="10dp"
        android:text="@string/userName"
        android:hint="@string/userName"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/navHeader_cv"
        app:layout_constraintTop_toBottomOf="@+id/navHeader_cv" />




    <Button
        android:id="@+id/themeChanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/navHeader_cv" />


</androidx.constraintlayout.widget.ConstraintLayout>
