<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moodTrackerHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:context=".MoodTrackerActivity"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/tracker_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/track"
                app:layout_constraintBottom_toBottomOf="@+id/moodTrackerDate"
                app:layout_constraintEnd_toStartOf="@+id/moodTrackerDate"

                />

            <TextView
                android:id="@+id/moodTracker_tv_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moodTracker"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tracker_image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="10dp"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moodTrackerContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodTrackerHeader">

        <TextView
            android:id="@+id/tvpickerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/viewMoodByDate"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/btpickerDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btpickerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/pickDate"
            app:layout_constraintBottom_toBottomOf="@+id/tvpickerDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvpickerDate"
            app:layout_constraintTop_toTopOf="@+id/tvpickerDate" />

        <com.jjoe64.graphview.GraphView

            android:id="@+id/graph_moodTracker"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btpickerDate" />

        <TextView
            android:id="@+id/emotionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/EmotionDescription"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graph_moodTracker" />

    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>








