<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--   NavBar for app -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/moodTrackerAppbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/moodTrackerBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:srcCompat="@drawable/back"
                android:contentDescription="@string/goBack"
                app:layout_constraintBottom_toBottomOf="@+id/moodTrackerTitle"
                app:layout_constraintTop_toTopOf="@+id/moodTrackerTitle"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/moodTrackerTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@string/moodTracker"
                android:textColor="@color/colorLightFont"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/moodTrackerBack"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:context=".MoodTrackerActivity">

            <TextView
                android:id="@+id/moodTrackerTrackbyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trackByDate"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/moodTrackerDate"
                app:layout_constraintEnd_toStartOf="@+id/moodTrackerDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/moodTrackerDate" />


            <EditText
                android:id="@+id/moodTrackerDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/moodTrackerTrackbyDate"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>